hydroflow/tests/compile-fail/surface_anti_join_badtypes.stderr
error[E0271]: type mismatch resolving `<ForEach<{closure@surface_anti_join_badtypes.rs:4:18}, {integer}> as Pusherator>::Item == &str`
 --> tests/compile-fail/surface_anti_join_badtypes.rs:5:13
  |
5 |           j = anti_join() -> for_each(std::mem::drop);
  |               -^^^^^^^^^^
  |               |
  |  _____________expected `&str`, found integer
  | |
6 | |         source_iter(0..10) -> map(|x| (x, x)) -> [pos]j;
7 | |         source_iter(0..10) -> map(|_| "string") -> [neg]j;
  | |_______________________________________________- required by a bound introduced by this call
  |
note: required by a bound in `main::{closure#1}::check_pivot_run`
 --> tests/compile-fail/surface_anti_join_badtypes.rs:5:13
  |
5 |           j = anti_join() -> for_each(std::mem::drop);
  |  _____________^
6 | |         source_iter(0..10) -> map(|x| (x, x)) -> [pos]j;
7 | |         source_iter(0..10) -> map(|_| "string") -> [neg]j;
  | |_______________________________________________^ required by this bound in `check_pivot_run`
